# miniCode

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/devnotes/: cli.py  config.py  logging_setup.py  parser.py  scanner.py  storage.py
tests/: test_config.py  test_parser.py  test_scanner.py  test_storage.py
